# sast-fuzz

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.dev  LICENSE  README.md  add.py  build.sh  cmake-format.sh
sast-fuzz/code_instrumentation/target_sites/src/: CMakeLists.txt  main.cpp
sast-fuzz/code_instrumentation/windranger/src/: CMakeLists.txt  main.cpp
sast-fuzz/fuzzing/src/: CMakeLists.txt  cycle_length.c  main.c  target_bb.c
sast-fuzz/fuzzing/src/container/: distance_matrix.c
sast-fuzz/fuzzing/tests/: CMakeLists.txt  test_cycle_length.cpp  test_distance_matrix.cpp
sast-fuzz/fuzzing/tests/data/: matrix.txt
sast-fuzz/static_analysis/inspection/: CMakeLists.txt
sast-fuzz/static_analysis/inspection/include/sfi/: bb_info.h  func_info.h  inspector.h  io.h  llvm_utils.h  pretty_printer.h  types.h
sast-fuzz/static_analysis/inspection/src/: CMakeLists.txt  main.cpp
sast-fuzz/static_analysis/inspection/src/container/: bb_info.cpp  func_info.cpp
sast-fuzz/static_analysis/inspection/src/logic/: inspector.cpp
sast-fuzz/static_analysis/inspection/src/utils/: io.cpp  llvm_utils.cpp  pretty_printer.cpp
sast-fuzz/static_analysis/inspection/tests/: CMakeLists.txt  main.cpp  test_bb_info.cpp  test_func_info.cpp  test_io.cpp  test_llvm_utils.cpp
sast-fuzz/static_analysis/sast/: config.yml  mypy.ini  pyproject.toml  run_ci_cmds.sh
sast-fuzz/static_analysis/sast/src/sfa/: __init__.py  main.py
sast-fuzz/static_analysis/sast/tests/: __init__.py  test_filter.py  test_flags.py  test_fs.py  test_grouping.py  test_proc.py  test_tool_runner.py
sast-fuzz/static_analysis/sast/tests/data/: test.sarif
scripts/crash-dedup/: config.yml  pyproject.toml  run_ci_cmds.sh
scripts/crash-dedup/src/cdd/: __init__.py  grouping.py  main.py
scripts/crash-dedup/src/cdd/container/: __init__.py  san.py  summary.py
scripts/crash-dedup/src/cdd/utils/: __init__.py  fs.py  proc.py
scripts/crash-dedup/tests/: __init__.py  test_grouping.py  test_san.py
scripts/crash-dedup/tests/crashes/: test.703474  test.703476  test.703482  test.703484  test.703486  test.703488  test.703490  test.703494  test.703498  test.703504  test.703506  test.703508  test.703510  test.703512
scripts/crash-dedup/tests/data/crashes/: test.703478  test.703492  test.703496  test.703500
scripts/crash-dedup/tests/data/sanitizer/: test.703472  test.703474  test.703476  test.703478  test.703480  test.703482  test.703484  test.703486  test.703488  test.703490  test.703492  test.703494  test.703496  test.703498  test.703500  test.703502  test.703504  test.703506  test.703508  test.703510  test.703512  test.703513  test.703514  test.703515
scripts/static_analysis/: pyproject.toml
src/: CMakeLists.txt  afl-analyze.c  afl-fuzz.c  afl-gotcpu.c  afl-showmap.c  afl-tmin.c
src/instrumentation/: CMakeLists.txt  afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
src/instrumentation/beacon/: CMakeLists.txt
src/instrumentation/beacon/Ins/: CMakeLists.txt
src/instrumentation/beacon/precondInfer/: CMakeLists.txt  backward-ai.cpp
src/instrumentation/beacon/precondInfer/BA/: AbstractState.cpp  AbstractState.h  AliasICFG.cpp  BackwardAnalysis.cpp  CMakeLists.txt  InstructionDbgInfo.cpp  InstructionDbgInfo.h  RangeAnalysis.cpp  RangeAnalysis.h  RangeComputeInterface.cpp  WPCondition.h  WPInferenceInterface.cpp
src/instrumentation/beacon/precondInfer/BackwardAnalysis/: AliasICFG.h  CMakeLists.txt  RangeComputeInterface.cpp  WPCondition.cpp
src/instrumentation/beacon/precondInfer/Expr/: ArrayCache.cpp  ArrayExprOptimizer.cpp  ArrayExprOptimizer.h  ArrayExprRewriter.cpp  ArrayExprRewriter.h  ArrayExprVisitor.cpp  ArrayExprVisitor.h  Assigment.cpp  AssignmentGenerator.cpp  AssignmentGenerator.h  CMakeLists.txt  Constraints.cpp  Expr.cpp  ExprBuilder.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  Updates.cpp
src/instrumentation/beacon/precondInfer/Support/: CMakeLists.txt  CompressionStream.cpp  ErrorHandling.cpp  FileHandling.cpp  MemoryUsage.cpp  PrintVersion.cpp  RNG.cpp  Time.cpp  Timer.cpp  TreeStream.cpp
src/instrumentation/beacon/precondInfer/src/: CMakeLists.txt  backward-ai.cpp
src/instrumentation/windranger/: CMakeLists.txt  cbi.cpp  main.cpp
src/instrumentation/windranger/include/cbi/: target.h
src/instrumentation/windranger/src/: CMakeLists.txt  main.cpp
src/instrumentation/windranger/src/container/: target.cpp
src/libs/: CMakeLists.txt
src/libs/dislocator/: CMakeLists.txt  libdislocator.so.c
src/static_analysis/: CMakeLists.txt
src/static_analysis/inspection/: CMakeLists.txt  Inspector.cpp  Inspector.h  LineTypes.h  PIHelper.cpp  PIHelper.h  PITypes.h  pi.cpp
src/static_analysis/inspection/container/: BBInfo.cpp  BBInfo.h  FuncInfo.cpp  FuncInfo.h  FunctionInfo.cpp  FunctionInfo.h
src/static_analysis/inspection/include/sast-fuzz/: BBInfo.h  FuncInfo.h  IO.h  LLVMUtils.h  PITypes.h  PrettyPrinter.h
src/static_analysis/inspection/include/sfi/: bb_info.h  func_info.h  inspector.h  io.h  llvm_utils.h  pretty_printer.h  types.h
src/static_analysis/inspection/src/: CMakeLists.txt  main.cpp
src/static_analysis/inspection/src/container/: bb_info.cpp  func_info.cpp
src/static_analysis/inspection/src/logic/: inspector.cpp
src/static_analysis/inspection/src/utils/: io.cpp  llvm_utils.cpp  pretty_printer.cpp
src/static_analysis/inspection/tests/: CMakeLists.txt  main.cpp  test_bb_info.cpp  test_func_info.cpp  test_io.cpp  test_llvm_utils.cpp
src/static_analysis/inspection/tests/artifacts/: quicksort.c
src/static_analysis/inspection/utils/: IO.cpp  IO.h  LLVMUtils.cpp  LLVMUtils.h  PrettyPrinter.cpp  PrettyPrinter.h
src/static_analysis/sast/: .gitignore  config.yml  mypy.ini  pyproject.toml
src/static_analysis/sast/.reuse/: dep5
src/static_analysis/sast/sfa/: config.py  main.py
src/static_analysis/sast/sfa/logic/: __init__.py  runner.py
src/static_analysis/sast/tests/: test_convert_sarif.py  test_filter.py  test_flags.py  test_fs.py  test_grouping.py  test_sast_flags.py  test_tool_runner.py
(+288 files in other folders)
