[tool.poetry]
name = "sast-fuzz analyzer"
version = "0.1.0"
description = "Static analyzer for SASTFuzz"
authors = ["Stephan Lipp <stephan.lipp@tum.de>"]
# readme = "README.md"
packages = [{include = "sfa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pyyaml = "^6.0"
types-pyyaml = "^6.0.12.10"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
bandit = "^1.7.5"
pytest = "^7.3.1"
coverage = "^7.2.7"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.scripts]
sfa = "sfa.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
