# SPDX-FileCopyrightText: 2023 Stephan Lipp, Technical University of Munich (TUM), et al.
# SPDX-License-Identifier: Apache-2.0
[tool.poetry]
name = "sast-fuzz_analyzer"
version = "0.1.0"
description = "Vulnerability indicator of the SAST-directed greybox fuzzer"
authors = ["Stephan Lipp <sphlpp91@gmail.com>"]
#readme = "README.md"
packages = [{include = "sfa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"

[tool.poetry.scripts]
sfa = "sfa.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
